# academy-learning-tau

./: .gitignore  AGENTS.md  CITATION.cff  README.md  packages.txt  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: BUILD_IDENTITY.txt  Home.py  locales.py  streamlit_app.py
app/assets/css/: custom.css
app/components/: auth.py  bootstrap.py  hero.py  lab_cache.py  micro_labs.py  pdf_ui.py  ui.py  workspace.py
app/pages/: 10_Biblioteca.py  1_Fundamentos.py  2_Matematica.py  2_Migracion_Paradigma.py  3_Dominios.py  3_Matematica.py  4_Laboratorio.py  5_Laboratorio.py  5_Ruta_Aprendizaje.py  6_Evidencia.py  7_Docencia.py  8_Materiales.py  9_Evaluaciones.py
content/dominios/: cardiologia.md  clima.md  ecologia.md  educacion.md  epidemiologia.md  finanzas.md  fisiologia.md  neurociencia.md  social.md
content/fr/evidencia/: publications.yaml
content/fundamentos/: 01_tau.md  02_ews_limits.md  03_recd_levels.md  04_excess3.md  05_csd.md  06_filosofia.md
content/handouts/: 01_guia_rapida.md  02_manual_usuario.md  03_teoria_tau_recd.md  04_matematica_practica.md  05_laboratorio_cheatsheet.md  06_lectura_dual.md  07_checklist_analisis.md  08_syllabus_6_semanas.md  09_etica_alcance.md  10_extensiones_tda_breathing.md
content/learning/: faq.md
docs/: ARCHITECTURE.md  DATASETS.md  DEPLOY.md  ENGINEERING.md  LAB_FLOW.md  SPEC.md
locales/en/: ui.json
locales/en/content/dominios/: cardiologia.md  clima.md  ecologia.md  educacion.md  epidemiologia.md  finanzas.md  fisiologia.md  neurociencia.md  social.md
locales/en/content/fundamentos/: 01_tau.md  02_ews_limits.md  03_recd_levels.md  04_excess3.md  (+2 more)
locales/es/: ui.json
locales/fr/: ui.json
scripts/: upgrade_evaluator_fixes.py
src/stp/: __init__.py
src/stp/core/: __init__.py  interpretation.py  tau_s.py
src/stp/domains/: __init__.py  adapters.py  voice.py
src/stp/education/: __init__.py  accounts.py  assessments.py  curriculum.py  handouts.py  research_library.py
src/stp/i18n/: core.py
src/stp/reports/: markdown_report.py
tests/: test_assessments_accounts.py  test_bootstrap_stale_ui.py  test_core_lazy_import.py  test_curriculum_domains_pdf.py  test_domain_voice.py  test_i18n.py  test_pipeline.py  test_research_library.py
(+39 files in other folders)
